# SDL3Template

./: .gitignore  CMakeLists.template  CMakeLists.txt  README.md  build.sh
.bash/: appendDirsToCMakeLists.sh  generateDirCMakeFiles.sh  getEnvVar.sh
.var/: env.txt  name.data
application/: CMakeLists.template
src/project/: main.cpp
src/project/example/: CMakeLists.txt  hello.cpp  hello.h
src/project/test/: CMakeLists.txt
